[gd_scene load_steps=15 format=3 uid="uid://dfu0sead5flvy"]

[ext_resource type="Script" uid="uid://dtk0fd0xee3vp" path="res://script-obstacles/laser_ver_2_space.gd" id="1_np60e"]
[ext_resource type="Texture2D" uid="uid://yuoc47f51bqd" path="res://space sprite/laser_deactivate.png" id="1_ts0wp"]
[ext_resource type="Script" uid="uid://cpgd7ixofqsxc" path="res://script-obstacles/laserver_2_killzone.gd" id="2_24kjf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_24kjf"]
atlas = ExtResource("1_ts0wp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_np60e"]
atlas = ExtResource("1_ts0wp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_miqsi"]
atlas = ExtResource("1_ts0wp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmhvv"]
atlas = ExtResource("1_ts0wp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwka8"]
atlas = ExtResource("1_ts0wp")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tw35"]
atlas = ExtResource("1_ts0wp")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynclm"]
atlas = ExtResource("1_ts0wp")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s13fj"]
atlas = ExtResource("1_ts0wp")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvwak"]
atlas = ExtResource("1_ts0wp")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5raxo"]
animations = [{
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_24kjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np60e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miqsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmhvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwka8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tw35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynclm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s13fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvwak")
}],
"loop": true,
"name": &"laser_ver2",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ts0wp"]
size = Vector2(10.6667, 33.3099)

[node name="laser_ver2_space" type="Node2D"]
script = ExtResource("1_np60e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -33)
scale = Vector2(1.60938, 4.01563)
sprite_frames = SubResource("SpriteFrames_5raxo")
animation = &"laser_ver2"
autoplay = "laser_ver2"
frame_progress = 0.816397

[node name="laserver2_killzone" type="Area2D" parent="."]
script = ExtResource("2_24kjf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="laserver2_killzone"]
position = Vector2(-0.499999, -33.5)
scale = Vector2(1.21875, 2.67188)
shape = SubResource("RectangleShape2D_ts0wp")

[node name="laser2_timer" type="Timer" parent="laserver2_killzone"]
one_shot = true

[connection signal="body_entered" from="laserver2_killzone" to="." method="_on_laserver_2_killzone_body_entered"]
[connection signal="timeout" from="laserver2_killzone/laser2_timer" to="." method="_on_laser_2_timer_timeout"]
